<resources>
    <string name="app_name">FirebaseOrders</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">"Remember me"</string>
    <string name="order_number">Order number</string>
    <string name="customer_name">Name</string>
    <string name="customer_phone">Phone</string>
    <string name="customer_address">Address</string>
    <string name="city_name">City</string>
    <string name="country_name">Country</string>
    <string name="due_date">Due Date</string>
    <string name="total_value">Total value</string>
    <string name="add_button">Add order</string>
    <string name="list_order_number">ORDER NO : </string>
    <string name="list_customer_name">Name : </string>
    <string name="list_customer_phone">Phone : </string>
    <string name="list_customer_address">Address : </string>
    <string name="list_city_name">City : </string>
    <string name="list_country_name">Country : </string>
    <string name="list_due_date">Due Date : </string>
    <string name="list_total_value">Total value : </string>
    <string name="please_wait">Please wait…</string>
    <string name="please_try_again">Something went wrong.Please try again...</string>
    <string name="alert_dilog_title">Order Delete?</string>
    <string name="alert_dilog_message">Are you sure you want to delete this entry?</string>
    <string name="please_enter_valid_input">Please enter valid input for and try again</string>
    <string name="deleted_successfully">Order deleted successfully...</string>
    <string name="order_updated_successfully">Order updated successfully...</string>
    <string name="order_inserted_successfully">Order inserted successfully...</string>
    <string name="location_added_successfully">Location added successfully...</string>
    <string name="operation_failed">Operation failed please try again...</string>
    <string name="swipe_left_and_right_to_check_orders">Swipe Left and Right to check Orders</string>
    <string name="menu_title">Add order</string>
</resources>
