<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    tools:context="com.example.firebaseorders.orders.ui.OrderActivity">

    <RelativeLayout
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        >

        <EditText
            android:id="@+id/order_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_number"
            android:inputType="number"
            android:maxLength="8"
            android:layout_marginTop="@dimen/dimen_20" />

        <EditText
            android:id="@+id/customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            android:layout_marginTop="@dimen/dimen_20"
            android:inputType="textPersonName"
            android:maxLength="16"
            android:layout_below="@id/order_number" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_phone"
            android:layout_marginTop="@dimen/dimen_20"
            android:inputType="phone"
            android:maxLength="10"
            android:layout_below="@id/customer_name" />

        <EditText
            android:id="@+id/customer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_address"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_below="@id/phone_number" />

        <EditText
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_name"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_below="@id/customer_address" />

        <EditText
            android:id="@+id/country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country_name"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_below="@id/city_name" />

        <EditText
            android:id="@+id/due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due_date"
            android:layout_marginTop="@dimen/dimen_20"
            android:inputType="date"
            android:layout_below="@id/country_name" />

        <ImageView
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/date_picker"
            android:layout_below="@+id/country_name"
            android:layout_alignRight="@+id/due_date"
            android:layout_marginRight="@dimen/dimen_20" />

        <EditText
            android:id="@+id/total_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_value"
            android:layout_marginTop="@dimen/dimen_20"
            android:inputType="number"
            android:layout_below="@id/due_date" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@color/backgrount_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/total_value" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_horizontal_margin"
            android:layout_below="@id/btn_add" />


    </RelativeLayout>



</ScrollView>