<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/orderCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:background="@android:color/darker_gray"
        android:layout_gravity="center_vertical"
        android:elevation="@dimen/dimen_10">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10">

            <LinearLayout
                android:id="@+id/layout_field_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/order_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:text="@string/list_order_number"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/order_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_one">

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:text="@string/list_customer_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_field_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_two">

                <TextView
                    android:id="@+id/customer_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:text="@string/list_customer_phone"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/phone_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_three">

                <TextView
                    android:id="@+id/customer_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:text="@string/list_customer_address"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_four">

                <TextView
                    android:id="@+id/customer_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:text="@string/list_city_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/city_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_five">

                <TextView
                    android:id="@+id/customer_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:text="@string/list_country_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/country_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_six">

                <TextView
                    android:id="@+id/total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:text="@string/list_total_value"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_field_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_seven">

                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:text="@string/list_due_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/due_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>