<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/orderCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/dimen_20"
        android:elevation="@dimen/dimen_4">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_field_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/order_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_order_number"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_5" />

                <TextView
                    android:id="@+id/order_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textStyle="bold"
                    android:textColor="@color/black" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_one" >

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_customer_name"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_5" />

                <TextView
                    android:id="@+id/name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/layout_field_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_two" >

                <TextView
                    android:id="@+id/customer_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_customer_phone"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_5" />

                <TextView
                    android:id="@+id/phone_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_three" >

                <TextView
                    android:id="@+id/customer_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_customer_address"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_5" />

                <TextView
                    android:id="@+id/address_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_four" >

                <TextView
                    android:id="@+id/customer_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_city_name"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_5" />

                <TextView
                    android:id="@+id/city_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_five" >

                <TextView
                    android:id="@+id/customer_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_country_name"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_5" />

                <TextView
                    android:id="@+id/country_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_field_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_field_six" >

                <TextView
                    android:id="@+id/total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_total_value"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_5" />

                <TextView
                    android:id="@+id/value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_due_date"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_5" />

                <TextView
                    android:id="@+id/due_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="21dp"
                android:padding="@dimen/dimen_10"
                android:src="@drawable/delete" />

            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/delete_icon"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:padding="@dimen/dimen_10"
                android:src="@drawable/edit" />



        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>